# ravven-tag

./: .gitignore
docs/: AprilTag_Baseline.pptx  AprilTag_Data_Report.docx  AprilTag_Hardware_Accelerated.pptx  AprilTag_Journal.docx  AprilTag_Simulink.docx  CCA_Timing_and_Accuracy.docx  Schedule_Task_Book.xlsx
examples/: Example_Code.m  WebcamDemo.m
examples/outputdir/: Edges.fig  GradDir.fig  GradMag.fig  Grayscale.fig  SegmentOut.fig  Segments.fig
frameBased/matlabBaseline/: bram.mat  ravvenTag.m
frameBased/matlabWithSimulink/: bram.mat  ravvenTag.m
frameBased/matlabWithSimulinkSingle/: bram.mat  ravvenTag.m
frameBased/matlabWithSimulinkSinglePatch/: bram.mat  ravvenTagCombo.m
frameBased/matlabWithSimulinkSinglePatchSmallImage/: Segmenter.m  bram.mat  cpAnnotation.mat  quad_ravven2.m  ravvenTagComboPlusKirsch.m  ravvenTagComboPlusKirschBinarized.m
frameBased/sizing/: bram.mat  cpAnnotation.mat  fiSetup.m  ravvenTagComboPlusKirschBinarized.m
linux-ravven-tag/: .gitignore  CMakeLists.txt  README.md  readme.txt
linux-ravven-tag/AprilTags/: Edge.h  GLine2D.h  GLineSegment2D.h  Gaussian.h  Gridder.h  MathUtil.h  Quad.h  Segment.h  Tag16h5.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  (+7 more)
linux-ravven-tag/python.boost/: CMakeLists.txt
linux-ravven-tag/python.boost/src/: PythonExport.cc
matlab/: README.md
pythonOnSystem/: README.md  comboServer.py  feedthroughAprilServer.py  feedthroughServer.py  feedthroughSnapshot.py  feedthroughSnapshotSpeedTest.py  remiHwTarget.py  remiKirsch.py
src/: README.md
visualStudio/: README.md
(+1359 files in other folders)
